[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
summary = LocalStack Extension: {{ cookiecutter.project_name }}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
package_dir=
    =backend
packages = find:
install_requires =
    localstack>=2.2

[options.packages.find]
where=backend
  
[options.entry_points]
localstack.extensions =
    {{ cookiecutter.module_name }} = {{ cookiecutter.module_name }}.extension:MyExtension

[options.package_data]
{{ cookiecutter.module_name }} = 
    static/*
